@@ -1,3 +1,8 @@
+2006-04-14  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Dest_new): cups.Dest type.
+	(Connection_getDests): Use cups.Dest type.
+
 2006-04-13  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_setPrinterOptionDefault):
